--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\ECS639\\python.exe"
+    "python.pythonPath": "E:\\Users\\Thomas\\Miniconda3\\envs\\ECS639U\\python.exe"
 }
