--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Django==2.1.0
-dj-database-url==0.3.0
-dj-static==0.0.6
-gunicorn==19.6.0
-Unipath==1.0
-python-decouple==3
-Pillow==3.3.0
-Markdown==2.6.6
-bleach==1.4.3
-psycopg2==2.7.1
+certifi==2018.4.16
+dj-database-url==0.5.0
+Django==2.1
+django-handlebars==0.1
+django-heroku==0.3.1
+django-templatetag-handlebars==1.3.1
+gunicorn==19.9.0
+Pillow==5.3.0
+psycopg2==2.7.6.1
+pytz==2018.5
 whitenoise==3.2
+wincertstore==0.2
