--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2018.4.16
 dj-database-url==0.5.0
 Django==2.1
+django-extensions==2.1.4
 django-handlebars==0.1
 django-heroku==0.3.1
 django-templatetag-handlebars==1.3.1
@@ -8,5 +9,6 @@ gunicorn==19.9.0
 Pillow==5.3.0
 psycopg2==2.7.6.1
 pytz==2018.5
+six==1.12.0
 whitenoise==4.1.2
 wincertstore==0.2
