--- a/fixtures/users.yaml
+++ b/fixtures/users.yaml
@@ -1,6 +1,6 @@
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$hmJ29OvFdlnQ$7trMRhqBqJwYJfNct1Heizg7p86aus8IHM/5xKr51SU=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-12-12 01:30:04.372130+00:00
         is_superuser: true
         username: admin
@@ -14,7 +14,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$3sTgqokQOg7W$NonIhEW/7DF5hm7pZkO1wNgVs+WKlycma+hoYNhZGYs=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-12-13 20:15:04.883824+00:00
         is_superuser: true
         username: neshanthan
@@ -28,7 +28,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$klaU10jgLIvk$0nZyw4dgnF+UNi1ccJIg2q/GcOQh73GtroMcblC0AXc=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: rR123@fmail.com
@@ -42,7 +42,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$JO9JKAhQUwhc$yIpeAsUgdWGKvvFKxYxIp9VetjRnMGhehjQ9/zmS9vE=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: n.GOLD@email.com
@@ -56,7 +56,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$2saAgQZglzem$LyxbJeafBonm2uS6bM3OKs+M1nCajV5fpBqE5Br//qg=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-11-11 14:15:25+00:00
         is_superuser: false
         username: j.s@neshanthan.com
@@ -70,7 +70,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$bmHmSwo0V4hU$QcLHGHVuEqjgPDmfLV9Nf8h1Hk1XOkuVB6q/XOeEpv0=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: ricky_lee@email.com
@@ -84,7 +84,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$Pgf8W3oRE6R3$tqtvzBYqYXun2hT5zncr072E5V2AbquW1eQH0OzbRp8=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: lez.M12@neshanthan.com
@@ -98,7 +98,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$3fbD8ss1DVzz$fQdak3THlRR2HwuS7eSPFlziPq3WuyV+kVqi2QTr4FI=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: welbeck.d97@email.com
@@ -112,7 +112,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$TkkxKIGwHVQA$zxDYug4onywuXoM69alUE1cbGQp1DhCU0Wq1yCCOdMU=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: flora22@email.com
@@ -126,7 +126,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$VpYJZ8ysgjfO$dMxlSLSgQcQxMk5cs8guII9CETJ/zNBYHlwnFcwEaWY=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: tou.dan1987@neshanthan.com
@@ -140,7 +140,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$XOrWvIZ5DEH4$9TxKDxATShokjZh2ogQtfz6hcLtaGy9wTywMf5n4jIM=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: cc_sweetnTasty@email.com
@@ -154,7 +154,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$UVFEZkEZmlT4$0ADeCgcpRUmlBTnB8KBLkiXvyxvLNtS8QUjH0LVX0+w=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: midnight1200@email.com
@@ -168,7 +168,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$aSiz98MJxuw5$LqsOuUoSUBJ1t+y5BJrTb4+jxJDybWKEn5iLwxVh5io=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: ticktalk@email.com
@@ -182,7 +182,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$tndwl9fVE2uE$Lyk1UX8Ax6kyrUGr8t2I7wbYDmOvb60OjFkyXUhjNWg=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: john.Mick@email.com
@@ -196,7 +196,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$yffN7Uox1YqJ$D2xy4igtWoVdvbBIXhHEbayon3KevxL1qFWF8jBTE6s=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: nanakokoro@japmail.com
@@ -210,7 +210,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$t34zR6bD0NBy$7AUpPgeRYt8SSeF6tbLAwp4vAyoEjYPtOc2EyoHd4ms=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: mimichi@japmail.com
@@ -224,7 +224,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$zQzx722aGkHS$3qxnzKve7qn0U+ZECKGGSErii/jdD95xnaPA8+safsw=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: franky93@email.com
@@ -238,7 +238,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$QnAywJDNCwKy$auBDt//E3vz1he6mJ5flgBLc7vaUmqMWfEKgSl1yG2M=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: mappy_go@email.com
@@ -252,7 +252,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$Sp09Vo3VEaeE$POK6xkOPfeqSVBmS5AcY0LHJQhHyIrz7uqDFaSyW7SA=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: dream_lady@email.com
@@ -266,7 +266,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$jvLQB1Fxr7pp$Zj8x996x8vKQdXRn5+VvK07a0+ksXpj0oiCWkQaUQdA=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: apple.yummy@email.com
@@ -280,7 +280,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$bTBoyD2jciwO$+FxSYEiRwBj62S/hwX8Muy2wDGyiR42WHsPVnhM9TeY=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: kaya@japmail.com
@@ -294,7 +294,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$8Cd4qdzwAMT9$wj5VczHw3pkINnCSTMx4FPBQiepbHv0pjuCn3O0qQ10=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: momo.dashi123@japmail.com
@@ -308,7 +308,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$K0gJKy2aJ5G4$2kS09gBSb24Ei8v6XUTwn7mFbTI0QxYXr4dV/6rAgQw=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: hanachan@japmail.com
@@ -322,7 +322,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$6q42Zlbv7c8W$QNP+n7j4cMCawHD/ZZ6PhUt4K4WDzy76gLjIybEgxYE=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-11-15 14:29:11+00:00
         is_superuser: false
         username: anny_k@neshanthan.com
@@ -336,7 +336,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$J3D4CU9mExhb$GlNMPa2bL4j2YfRU1zPs/4V9MpY+xcHhWxT2rXbJ/JM=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: nosy_mall@hotmail.com
@@ -350,7 +350,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$53GjCYZgeXPO$ytqhVv0bH9Gnw3J/l0hHjsC2AreADV0CMgy6qvSwvLU=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-12-12 13:59:52+00:00
         is_superuser: false
         username: kaonshi99@japmail.com
@@ -364,7 +364,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$TA2Fl5qCJ7qI$nohuiQP7ktmIKEepsO+wLDoiGixmQTamuJ+U03sHZZ8=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: tedthai@neshanthan.com
@@ -378,7 +378,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$gUVz8ESO1j9s$2qPPHn0q7AjDE08Sp40oU24l0dcidSqZoqFktyXNSx0=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: null
         is_superuser: false
         username: gimmyHC@kmail.com
@@ -392,7 +392,7 @@
         user_permissions: []
 -   model: auth.user
     fields:
-        password: pbkdf2_sha256$120000$q8ENNF31EYdj$UHnvdh0FCAy2e10uN3m9ppQw84Oqmcaz1R30ORwreYw=
+        password: pbkdf2_sha256$120000$GQuavLSSvDN7$lGyoeQ/ry4HviY072Sqi/BXx6xqk8SjnLSmmJj4dazY=
         last_login: 2018-12-12 12:00:16+00:00
         is_superuser: false
         username: walkTheBill@email.com
