Fixed Import Script

--- a/fixtures/profiles.yaml
+++ b/fixtures/profiles.yaml
@@ -49,7 +49,7 @@
         gender: M
         description: Nothing Much!
         location: Norway
-        dob: 2000-01-30
+        dob: 1994-01-30
         adjectives: Computer Scientist
         views: 110
         prevHeat: 3
@@ -72,13 +72,14 @@
         gender: F
         description: Nothing Much!
         location: Hong Kong
-        dob: 2000-01-30
+        dob: 1997-01-30
         adjectives: Friendly, food eater, Lazy girl
         views: 110
         prevHeat: 3
         newMatches: 0
         hobbies:
         - [Watching movies]
+        - [Football]
         heat:
         - [admin]
         - [neshanthan.a@gmail.com]
@@ -132,13 +133,14 @@
             can also cook a mean baked tilapia or spaghetti dinner. Let me know if
             you\u2019re interested or just give me some tips on my red sauce."
         location: Manchester
-        dob: 1995-01-30
+        dob: 1990-05-30
         adjectives: Bookworm, learner, chef, playing the guitar
         views: 1
         prevHeat: -1
         newMatches: 0
         hobbies:
         - [Watching movies]
+        - [Baking]
         heat: []
 -   model: users.profile
     fields:
@@ -170,7 +172,7 @@
             days. Just a few of the things that make me happy. Maybe you can help
             add to the list.
         location: China
-        dob: 1995-01-30
+        dob: 1945-09-20
         adjectives: Playing with kids, rain man, cafe sitter
         views: 0
         prevHeat: 0
@@ -222,6 +224,7 @@
         newMatches: 0
         hobbies:
         - [Baking]
+        - [Drawing]
         heat: []
 -   model: users.profile
     fields:
@@ -238,13 +241,14 @@
             As long as you have something interesting to say, I want to hear it.\r\n-I\u2019m
             a little old-fashioned. If you open a door for me, I will melt"
         location: Australia
-        dob: 1995-01-30
+        dob: 1992-01-30
         adjectives: Old-fashioned, cat lover, business woman
         views: 0
         prevHeat: 0
         newMatches: 0
         hobbies:
         - [Watching movies]
+        - [Drawing]
         heat: []
 -   model: users.profile
     fields:
@@ -259,13 +263,14 @@
             teaching and consulting. If you\u2019re interested say hi or tap that
             little heart button and I\u2019ll see if I can give you a reason to smile."
         location: China
-        dob: 1995-01-30
+        dob: 1990-01-30
         adjectives: Musician, Advisor, Teacher, rock n' roll
         views: 0
         prevHeat: 0
         newMatches: 0
         hobbies:
         - [Drinking]
+        - [Drawing]
         heat: []
 -   model: users.profile
     fields:
@@ -281,13 +286,14 @@
             to know more people. Plus, I cannot tell you how much I missed a good
             burger. Delicious!"
         location: Sanfancisco
-        dob: 1995-01-30
+        dob: 1990-06-24
         adjectives: Traveller, teacher, fans of burger
         views: 0
         prevHeat: 0
         newMatches: 0
         hobbies:
         - [Baking]
+        - [Drinking]
         heat: []
 -   model: users.profile
     fields:
@@ -303,7 +309,7 @@
             If you\u2019d like to spend some time outside with a nice girl, I\u2019m
             the one for you."
         location: Timer
-        dob: 1995-01-30
+        dob: 1945-01-30
         adjectives: outdoor female, sporting, love to hike and explore
         views: 0
         prevHeat: 0
@@ -324,13 +330,15 @@
             to meet new people and hang with friends. If you\u2019re interested, let\u2019s
             start chatting."
         location: In the watch
-        dob: 1995-01-30
+        dob: 1975-01-30
         adjectives: Daddy, Active, love to meet new friends
         views: 0
         prevHeat: 0
         newMatches: 1
         hobbies:
         - [Football]
+        - [Drinking]
+        - [Watching movies]
         heat: []
 -   model: users.profile
     fields:
@@ -347,7 +355,7 @@
             but I have a major weakness for pizza. Let me know if you want to go get
             a slice!"
         location: European
-        dob: 1995-01-30
+        dob: 1998-01-30
         adjectives: gentleman, pizza boy, drinker
         views: 0
         prevHeat: 0
@@ -375,6 +383,7 @@
         newMatches: 0
         hobbies:
         - [Drinking]
+        - [Football]
         heat: []
 -   model: users.profile
     fields:
@@ -389,7 +398,7 @@
             quote Neil Gaiman, keep up with me on a road bike, and show me something
             I haven\u2019t tried before you should definitely message me."
         location: Japan
-        dob: 1995-01-30
+        dob: 1992-01-30
         adjectives: Sporty, winter fans, cycling
         views: 0
         prevHeat: 0
@@ -409,7 +418,7 @@
             and learning about all the things I thought I knew but now realize I had
             no idea about. It\u2019s a crazy world, let\u2019s be crazy together."
         location: Paris
-        dob: 1995-01-30
+        dob: 1999-04-30
         adjectives: Active, crazy, drinker, outgoing
         views: 0
         prevHeat: 0
@@ -430,7 +439,7 @@
             ones. Guts. Gore. All of it. If you\u2019ve ever heard of Suspiria, please
             message me right now because we need to talk."
         location: Dessert world
-        dob: 1995-01-30
+        dob: 1996-05-30
         adjectives: Polit, good manner, nice
         views: 0
         prevHeat: 0
@@ -460,6 +469,7 @@
         newMatches: 0
         hobbies:
         - [Baking]
+        - [Watching movies]
         heat: []
 -   model: users.profile
     fields:
@@ -495,13 +505,14 @@
             for something good to come off the grill but I love to use my Sundays
             to get out and exercise and get ready for the week ahead too."
         location: Japan
-        dob: 2007-01-30
+        dob: 2000-01-30
         adjectives: Friendly, Fits, stay healthy
         views: 0
         prevHeat: -2
         newMatches: 0
         hobbies:
         - [Drinking]
+        - [Watching movies]
         heat: []
 -   model: users.profile
     fields:
@@ -516,7 +527,7 @@
             probably never heard of\u2014the weirder the better. If you\u2019d like
             to spend some time outside with a nice guy, I\u2019m the one for you."
         location: Japan
-        dob: 1995-01-30
+        dob: 1991-01-30
         adjectives: Sporty, Joker, nice to everyone
         views: 0
         prevHeat: 0
@@ -540,7 +551,7 @@
             and definitely can be a big ball of energy at times. I\u2019m looking
             for a guy who can keep up and keep me on my toes."
         location: Japan
-        dob: 1995-01-30
+        dob: 1994-06-06
         adjectives: Home chef, sporty
         views: 5
         prevHeat: 0
