--- a/fixtures/profiles.yaml
+++ b/fixtures/profiles.yaml
@@ -368,7 +368,7 @@
         user: [nanakokoro@japmail.com]
         image: profile_pics/main-qimg-1bac1fc3a82021d94e4ba820103e9a28.png
         gender: F
-        description: "ou should probably know that I somehow manage to spill guacamole
+        description: "You should probably know that I somehow manage to spill guacamole
             on myself every time I eat it, which is often. If you can get past that,
             you\u2019ll probably enjoy getting to know me. I\u2019m a nurse practitioner
             and I absolutely love my job and my patients. It\u2019s hard work, but
